--- a/angular.json
+++ b/angular.json
@@ -24,11 +24,13 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/bootswatch/dist/pulse/bootstrap.min.css",
+              "node_modules/datatables.net-dt/css/jquery.dataTables.css",
+              "node_modules/bootswatch/dist/pulse/bootstrap.min.css",              
               "src/styles.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.js",
+              "node_modules/datatables.net/js/jquery.dataTables.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js"
             ]
           },
